conformance/tests/httproute-invalid-parentref-section-name-not-matching-port.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-one-not-matching-port-and-section-name-route
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-listener-section-name-not-matching-port
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-with-one-not-matching-port-and-section-name-route
    namespace: gateway-conformance-infra
    sectionName: http
    # mismatched port value here (81 does not match gateway http listener's port) triggers NoMatchingParent reason
    port: 81
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
